--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Lesson 2</title>
   </head>
   <body>
-    <button class="btn btn-primary">GET HOLIDAYS</button>
-    <div id="result"></div>
-
+    <div class="container-fluid">
+      <button class="btn btn-primary">GET HOLIDAYS</button>
+      <div id="result"></div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
