--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Lesson 2</title>
   </head>
   <body>
-    <button class="btn btn-primary">GET HOLIDAYS</button>
+
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Year</label>
+        <input type="text" class="form-control" id="year" placeholder="Enter year">
+        <small id="emailHelp" class="form-text text-muted">Enter year.</small>
+      </div>
+      <button class="btn btn-primary">GET HOLIDAYS</button>
+    </form>
+
     <div id="result"></div>
 
 
