made input Country

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Lesson 2</title>
   </head>
   <body>
+  <form>
+	<div class="form-group">
+		<label for="exampleInputEmail1">Enter country</label>
+		<input type="text" class="form-control" id="country" placeholder="US, UK, FR...">
+		<small id="CountryHelp" class="form-text text-muted">Please enter country in 2-letter capitalized format</small>
+	</div>
     <button class="btn btn-primary">GET HOLIDAYS</button>
+	</form>
     <div id="result"></div>
 
 
