--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Lesson 2</title>
   </head>
   <body>
-    <button class="btn btn-primary">GET HOLIDAYS</button>
+    <button type="button" class="btn btn-primary">
+      Get holidays <span class="badge badge-light">4</span>
+    </button>
     <div id="result"></div>
 
 
