--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Lesson 2</title>
   </head>
   <body>
-    <button class="btn btn-primary">GET HOLIDAYS</button>
+    <form>
+
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">not a robot</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
     <div id="result"></div>
 
 
