--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
           <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Enter country</label>
-              <input type="text" class="form-control" id="country" aria-describedby="emailHelp" placeholder="US, UK, FR...">
-              <small id="emailHelp" class="form-text text-muted">Please enter country in 2-letter capitalized format</small>
+              <select name="country" class="form-control" id="countrySelect"></select>
+              <!-- <input type="text" class="form-control" id="country" aria-describedby="emailHelp" placeholder="US, UK, FR..."> -->
+              <!-- <small id="emailHelp" class="form-text text-muted">Please enter country in 2-letter capitalized format</small> -->
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Enter year</label>
