--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <!-- <script src="jquery-3.4.1.min.js"></script> -->
-    <title>Lesson 2</title>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="helpers/captcha.jquery.js"></script> -->
+    <title>Countries info</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-6">
-          <form>
+          <form id="form">
             <div class="form-group">
               <label for="exampleInputEmail1">Enter country</label>
               <select name="country" class="form-control" id="countrySelect"></select>
@@ -26,6 +28,7 @@
               <input type="checkbox" class="form-check-input" id="robot">
               <label class="form-check-label" for="exampleCheck1">I am not a robot </label>
             </div>
+            <div class="captcha"></div>
           </form>
           <button id="getHolidays" class="btn btn-primary">
             GET HOLIDAYS
@@ -49,6 +52,7 @@
 
     <script src="config.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
+    <script type="text/javascript" src="helpers/captcha.jquery.js"></script>
 
   </body>
 </html>
