--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
               <label for="exampleInputPassword1">Enter year</label>
               <input type="number" class="form-control" id="year" placeholder="2019, 2020...">
             </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="robot">
-              <label class="form-check-label" for="exampleCheck1">I am not a robot </label>
-            </div>
+            <!-- <div class="form-check"> -->
+              <!-- <input type="checkbox" class="form-check-input" id="robot"> -->
+              <!-- <label class="form-check-label" for="exampleCheck1">I am not a robot </label> -->
+            <!-- </div> -->
           </form>
           <button id="getHolidays" class="btn btn-primary">
             GET HOLIDAYS
