--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <!-- <script src="jquery-3.4.1.min.js"></script> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="helpers/captcha.jquery.js"></script> -->
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>Countries info</title>
   </head>
   <body>
+    <div class="container-fluid">
+      <h2>This page will display holidays and country info</h2>
+    </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-6">
           <form id="form">
             <div class="form-group">
-              <label for="exampleInputEmail1">Enter country</label>
+              <label for="exampleInputEmail1">Select country</label>
               <select name="country" class="form-control" id="countrySelect"></select>
               <!-- <input type="text" class="form-control" id="country" aria-describedby="emailHelp" placeholder="US, UK, FR..."> -->
               <!-- <small id="emailHelp" class="form-text text-muted">Please enter country in 2-letter capitalized format</small> -->
@@ -43,7 +44,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
